# tidal-scales

./: README.md  tidal-scales.cabal
Sound/Tidal/: Scales.hs
