name:                tidal-scales
version:             0.1
-- synopsis:
-- description:
homepage:            https://github.com/lvm/tidal-scales
license:             GPL-3
license-file:        LICENSE
author:              Mauro Lizaur
maintainer:          Mauro Lizaur <mauro@sdf.org>
-- copyright:
category:            Sound
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Sound.Tidal.Scales

  -- other-modules:
  -- other-extensions:
  Build-depends: base < 5, tidal
  -- hs-source-dirs:
  default-language:    Haskell2010
